--- a/index.html
+++ b/index.html
@@ -24,6 +24,27 @@ let findCiti= cities[15]
 console.log(findCiti);
 
 
+let quantity=cities.length;
+console.log(quantity)
+
+
+cities.push("patna");
+console.log(cities)
+
+cities.shift();
+console.log(cities)
+
+cities.unshift("Mumbai");
+console.log(cities)
+
+cities.pop();
+console.log(cities)
+
+let findIndex=cities.indexOf("Nagpur");
+console.log(findIndex)
+
+cities.splice(13,2,"Bhandara","Gondia","Gadchiroli");
+console.log(cities)
 
 cities.sort();
 console.log(cities)
